<resources>
    <string name="app_name">calculator</string>
    <string name="math">math</string>
    <string name="brackets">( )</string>
    <string name="delete"><![CDATA[<]]></string>
    <string name="clear">C</string>
    <string name="divide">/</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="multiply">×</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="reduce">—</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="add">+</string>
    <string name="btn_0">0</string>
    <string name="point">.</string>
    <string name="save">S</string>
    <string name="equal">=</string>
    <string name="introduction">功能</string>
</resources>
