<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <!--指定theme为dark.ActionBar是为了让标题栏上的字体为白色，黑色很难看-->
    <!--指定app：popupTheme为这个是为了确定弹出菜单不是黑色的，黑色也很难看-->

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/Edit_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text=""
            android:focusable="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="="
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/Text_out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:padding="10dp"
                android:text="0"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/brackets"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/brackets"
                android:textSize="20sp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/delete"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/clear"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/clear"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/divide"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/divide"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_7"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_8"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_9"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/multiply"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_4"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_5"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_6"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/reduce"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/reduce"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_1"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_2"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_3"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/add"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/add"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_0"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_0"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/point"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/point"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/save"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/save"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/equal"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/equal"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>